[metadata]
name = aichopen_tools
version = file: VERSION
author = Joep Barmentlo & Alexandre Carlot
author_email = joep.barmentlo@echopenfactory.com, alexandre.carlot@echopenfactory.com
description = Package to aggregate tools used and developed by the ai-team
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/echOpen/aichopen-tools.git
project_urls =
    Bug Tracker = https://github.com/echOpen/aichopen-tools/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent


[options]
packages = aichopen_tools
python_requires = ~=3.8

